--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
   <title>swatchlet.com : share colors and color swatches easily.</title>
-  <link rel="stylesheet" href="stylesheets/lazergunz.css" type="text/css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="stylesheets/lazergunz.css" type="text/css" media="screen" />
 
-  <script src="javascripts/prototype.js" type="text/javascript" charset="utf-8"></script>
-  <script src="javascripts/effects.js" type="text/javascript" charset="utf-8"></script>
-  <script src="javascripts/dragdrop.js" type="text/javascript" charset="utf-8"></script>
-  <script src="javascripts/swatchlet.js" type="text/javascript" charset="utf-8"></script>
+  <script src="javascripts/prototype.js" type="text/javascript"></script>
+  <script src="javascripts/effects.js" type="text/javascript"></script>
+  <script src="javascripts/dragdrop.js" type="text/javascript"></script>
+  <script src="javascripts/swatchlet.js" type="text/javascript"></script>
 
 </head>
 
