Rewriting a lot of it, trying to not use Class.create so much.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <h1 id="tag"><strong>swatchlet.com</strong> : share colors and color swatches easily.</h1>
     <ul id="links">
       <li><a href="#add">Add New Color</a></li>
-    </ul>
-    <ul id="toplinks">
+      <li style="display: none;"><a href="/">Reset</a></li>
+      <li style="display: none;"><a href="#embed">Embed</a></li>
       <li><a href="#about">About &amp; How to Use</a></li>
     </ul>
   </div>
@@ -31,7 +31,7 @@
     
   </div>
   
-  <div id="content">
+  <div id="content" style="display: none;">
     <div class="margin">
       <div id="about">
         <h1>About Swatchlet.com</h1>
@@ -49,17 +49,18 @@
           </li>
         </ul>
       </div>
+    </div>
+    <a id="close" href="#close">(Close)</a>
   </div>
-  <a id="close" href="#close">(Close)</a>
-</div>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-79467-6");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
+  
+  <!-- <script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+  var pageTracker = _gat._getTracker("UA-79467-6");
+  pageTracker._initData();
+  pageTracker._trackPageview();
+  </script> -->
 </body>
 </html>
