--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <div id="head">
     <h1 id="tag"><strong>swatchlet.com</strong> : share colors and color swatches easily.</h1>
     <ul id="links">
-      <li><a href="#add">Add New Color</a></li>
-      <li style="display: none;"><a href="/">Reset</a></li>
+      <li><a href="#add">[&nbsp;<strong>+</strong>&nbsp;] &nbsp;Add New Color</a></li>
+      <li><a href="/">Reset</a></li>
       <li style="display: none;"><a href="#embed">Embed</a></li>
-      <li><a href="#about">About &amp; How to Use</a></li>
+      <li><a href="#about">[&nbsp;<strong>?</strong>&nbsp;] &nbsp;About &amp; How to Use</a></li>
     </ul>
   </div>
 
