--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
+  
   <title>swatchlet.com : share colors and color swatches easily.</title>
   <link rel="stylesheet" href="stylesheets/lazergunz.css" type="text/css" media="screen" />
-
+  
   <script src="javascripts/prototype.js" type="text/javascript"></script>
   <script src="javascripts/effects.js" type="text/javascript"></script>
   <script src="javascripts/dragdrop.js" type="text/javascript"></script>
+  
+  <!-- <script type="text/javascript" src="colorpicker/ColorMethods.js" ></script>
+  <script type="text/javascript" src="colorpicker/ColorValuePicker.js" ></script>
+  <script type="text/javascript" src="colorpicker/Slider.js" ></script>
+  <script type="text/javascript" src="colorpicker/ColorPicker.js" ></script> -->
+  
   <script src="javascripts/swatchlet.js" type="text/javascript"></script>
 
 </head>
@@ -42,7 +48,7 @@
         <ul>
           <li>
             Paste in any number of hex (FFCC00) color names as a comma separated list after a <strong>#</strong> following <strong>http://swatchlet.com/</strong>.<br />
-            <strong>Example</strong>: <a href="http://yubnub.org/parser/parse?command=swatch+ffcc00,ccff00,00ff00,cc00ff,3388aa">http://swatchlet.com/#ffcc00,ccff00,00ff00,cc00ff,3388aa</a>.
+            <strong>Example</strong>: <a href="http://www.yubnub.org/parser/parse?command=swatch+ffcc00,ccff00,00ff00,cc00ff,3388aa">http://swatchlet.com/#ffcc00,ccff00,00ff00,cc00ff,3388aa</a>
           </li>
           <li>
             Yubnub.org Example Usage: <strong>swatch 468966,FFF0A5,FFB03B,B64926</strong>
@@ -50,10 +56,10 @@
         </ul>
       </div>
     </div>
-    <a id="close" href="#close">(Close)</a>
+    <a id="close" href="#close">[x]</a>
   </div>
   
-  <!-- <script type="text/javascript">
+  <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
   </script>
@@ -61,6 +67,6 @@
   var pageTracker = _gat._getTracker("UA-79467-6");
   pageTracker._initData();
   pageTracker._trackPageview();
-  </script> -->
+  </script>
 </body>
 </html>
