--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <script src="javascripts/effects.js" type="text/javascript"></script>
   <script src="javascripts/dragdrop.js" type="text/javascript"></script>
   
-  <!-- <script type="text/javascript" src="colorpicker/ColorMethods.js" ></script>
+  <script type="text/javascript" src="colorpicker/ColorMethods.js" ></script>
   <script type="text/javascript" src="colorpicker/ColorValuePicker.js" ></script>
   <script type="text/javascript" src="colorpicker/Slider.js" ></script>
-  <script type="text/javascript" src="colorpicker/ColorPicker.js" ></script> -->
+  <script type="text/javascript" src="colorpicker/ColorPicker.js" ></script>
   
   <script src="javascripts/swatchlet.js" type="text/javascript"></script>
 
@@ -59,14 +59,152 @@
     <a id="close" href="#close">[x]</a>
   </div>
   
-  <script type="text/javascript">
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  <div style="display: none;">
+    <img src="colorpicker/images/bar-blue-bl.png" />
+    <img src="colorpicker/images/bar-blue-br.png" />
+    <img src="colorpicker/images/bar-blue-tl.png" />
+    <img src="colorpicker/images/bar-blue-tr.png" />
+    <img src="colorpicker/images/bar-brightness.png" />
+    <img src="colorpicker/images/bar-green-bl.png" />
+    <img src="colorpicker/images/bar-green-br.png" />
+    <img src="colorpicker/images/bar-green-tl.png" />
+    <img src="colorpicker/images/bar-green-tr.png" />
+    <img src="colorpicker/images/bar-hue.png" />
+    <img src="colorpicker/images/bar-red-bl.png" />
+    <img src="colorpicker/images/bar-red-br.png" />
+    <img src="colorpicker/images/bar-red-tl.png" />
+    <img src="colorpicker/images/bar-red-tr.png" />
+    <img src="colorpicker/images/bar-saturation.png" />
+    <img src="colorpicker/images/map-blue-max.png" />
+    <img src="colorpicker/images/map-blue-min.png" />
+    <img src="colorpicker/images/map-brightness.png" />
+    <img src="colorpicker/images/map-green-max.png" />
+    <img src="colorpicker/images/map-green-min.png" />
+    <img src="colorpicker/images/map-hue.png" />
+    <img src="colorpicker/images/map-red-max.png" />
+    <img src="colorpicker/images/map-red-min.png" />
+    <img src="colorpicker/images/map-saturation-overlay.png" />
+    <img src="colorpicker/images/map-saturation.png" />
+    <img src="colorpicker/images/mappoint.gif" />
+    <img src="colorpicker/images/rangearrows.gif" />
+  </div>
+  
+  <div id="colorpicker" style="display: none;">
+    <table>
+      <tr>
+        <td valign="top">
+          <div id="cp1_ColorMap" style="width:256px;"></div>
+        </td>
+        <td valign="top">
+          <div id="cp1_ColorBar"></div>
+        </td>
+        <td valign="top">
+          <table>
+            <tr>
+              <td colspan="3">
+                <div id="cp1_Preview" style="background-color: #fff; width: 60px; height: 60px; padding: 0; margin: 0; border: solid 1px #000;">
+                  <br />
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <input type="radio" id="cp1_HueRadio" name="cp1_Mode" value="0" />
+              </td>
+              <td>
+                <label for="cp1_HueRadio">H:</label>
+              </td>
+              <td>
+                <input type="text" id="cp1_Hue" value="0" style="width: 40px;" /> &deg;
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <input type="radio" id="cp1_SaturationRadio" name="cp1_Mode" value="1" />
+              </td>
+              <td>
+                <label for="cp1_SaturationRadio">S:</label>
+              </td>
+              <td>
+                <input type="text" id="cp1_Saturation" value="100" style="width: 40px;" /> %
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <input type="radio" id="cp1_BrightnessRadio" name="cp1_Mode" value="2" />
+              </td>
+              <td>
+                <label for="cp1_BrightnessRadio">B:</label>
+              </td>
+              <td>
+                <input type="text" id="cp1_Brightness" value="100" style="width: 40px;" /> %
+              </td>
+            </tr>
+            <tr>
+              <td colspan="3" height="5">
+                x
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <input type="radio" id="cp1_RedRadio" name="cp1_Mode" value="r" />
+              </td>
+              <td>
+                <label for="cp1_RedRadio">R:</label>
+              </td>
+              <td>
+                <input type="text" id="cp1_Red" value="255" style="width: 40px;" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <input type="radio" id="cp1_GreenRadio" name="cp1_Mode" value="g" />
+              </td>
+              <td>
+                <label for="cp1_GreenRadio">G:</label>
+              </td>
+              <td>
+                <input type="text" id="cp1_Green" value="0" style="width: 40px;" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <input type="radio" id="cp1_BlueRadio" name="cp1_Mode" value="b" />
+              </td>
+              <td>
+                <label for="cp1_BlueRadio">B:</label>
+              </td>
+              <td>
+                <input type="text" id="cp1_Blue" value="0" style="width: 40px;" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                #:
+              </td>
+              <td colspan="2">
+                <input type="text" id="cp1_Hex" value="FF0000" style="width: 60px;" />
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td><button>OK</button>&nbsp;&nbsp;&nbsp;<a href="#cancel">Cancel</a></td>
+      </tr>
+    </table>
+  </div>
+  
+  <!-- <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
   </script>
   <script type="text/javascript">
-  var pageTracker = _gat._getTracker("UA-79467-6");
-  pageTracker._initData();
-  pageTracker._trackPageview();
-  </script>
+    var pageTracker = _gat._getTracker("UA-79467-6");
+    pageTracker._initData();
+    pageTracker._trackPageview();
+  </script> -->
 </body>
 </html>
