Major rewrite. Added a new color class. Implemented Color Picker!

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <img src="colorpicker/images/rangearrows.gif" />
   </div>
   
-  <div id="colorpicker" style="display: none;">
+  <div id="colorpicker">
     <table>
       <tr>
         <td valign="top">
@@ -192,7 +192,7 @@
       <tr>
         <td></td>
         <td></td>
-        <td><button>OK</button>&nbsp;&nbsp;&nbsp;<a href="#cancel">Cancel</a></td>
+        <td><button id="cp_ok">OK</button>&nbsp;&nbsp;&nbsp;<a href="#cancel" id="cp_cancel">Cancel</a></td>
       </tr>
     </table>
   </div>
