--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </table>
   </div>
   
-  <!-- <script type="text/javascript">
+  <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
     document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
   </script>
@@ -209,6 +209,6 @@
     var pageTracker = _gat._getTracker("UA-79467-6");
     pageTracker._initData();
     pageTracker._trackPageview();
-  </script> -->
+  </script>
 </body>
 </html>
