Tweaks to markup.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </ul>
       </div>
     </div>
-    <a id="close" href="#close">[x]</a>
+    <a id="close" href="#close">[ x ]</a>
   </div>
   
   <div style="display: none;">
@@ -146,7 +146,7 @@
             </tr>
             <tr>
               <td colspan="3" height="5">
-                x
+                &nbsp;
               </td>
             </tr>
             <tr>
