--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
   
   <title>swatchlet.com : share colors and color swatches easily.</title>
   <meta name="description" content="swatchlet.com : share colors and color swatches easily." />
-  <link rel="stylesheet" href="stylesheets/lazergunz.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="stylesheets/styles.css" type="text/css" media="screen" />
   
-  <script src="javascripts/prototype.js" type="text/javascript"></script>
+  <!-- <script src="javascripts/prototype.js" type="text/javascript"></script>
   <script src="javascripts/effects.js" type="text/javascript"></script>
   <script src="javascripts/dragdrop.js" type="text/javascript"></script>
   
@@ -18,8 +18,8 @@
   <script type="text/javascript" src="colorpicker/Slider.js" ></script>
   <script type="text/javascript" src="colorpicker/ColorPicker.js" ></script>
   
-  <script src="javascripts/swatchlet.js" type="text/javascript"></script>
-  
+  <script src="javascripts/swatchlet.js" type="text/javascript"></script> -->
+  <script src="javascripts/applications.js" type="text/javascript"></script>
   <link href="http://github.com/feeds/deleteme/commits/swatchlet.com/master" rel="alternate" title="Recent Commits to swatchlet.com:master" type="application/atom+xml" />
   
 </head>
