Properly loading the ColorPicker.js with Sprockets now.

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   
   <script src="javascripts/swatchlet.js" type="text/javascript"></script>
   -->
-  <script src="javascripts/applications.js" type="text/javascript"></script>
+  <script src="javascripts/application.js" type="text/javascript"></script>
   
   <link href="http://github.com/feeds/deleteme/commits/swatchlet.com/master" rel="alternate" title="Recent Commits to swatchlet.com:master" type="application/atom+xml" />
   
@@ -67,33 +67,33 @@
   </div>
   
   <div style="display: none;">
-    <img src="colorpicker/images/bar-blue-bl.png" />
-    <img src="colorpicker/images/bar-blue-br.png" />
-    <img src="colorpicker/images/bar-blue-tl.png" />
-    <img src="colorpicker/images/bar-blue-tr.png" />
-    <img src="colorpicker/images/bar-brightness.png" />
-    <img src="colorpicker/images/bar-green-bl.png" />
-    <img src="colorpicker/images/bar-green-br.png" />
-    <img src="colorpicker/images/bar-green-tl.png" />
-    <img src="colorpicker/images/bar-green-tr.png" />
-    <img src="colorpicker/images/bar-hue.png" />
-    <img src="colorpicker/images/bar-red-bl.png" />
-    <img src="colorpicker/images/bar-red-br.png" />
-    <img src="colorpicker/images/bar-red-tl.png" />
-    <img src="colorpicker/images/bar-red-tr.png" />
-    <img src="colorpicker/images/bar-saturation.png" />
-    <img src="colorpicker/images/map-blue-max.png" />
-    <img src="colorpicker/images/map-blue-min.png" />
-    <img src="colorpicker/images/map-brightness.png" />
-    <img src="colorpicker/images/map-green-max.png" />
-    <img src="colorpicker/images/map-green-min.png" />
-    <img src="colorpicker/images/map-hue.png" />
-    <img src="colorpicker/images/map-red-max.png" />
-    <img src="colorpicker/images/map-red-min.png" />
-    <img src="colorpicker/images/map-saturation-overlay.png" />
-    <img src="colorpicker/images/map-saturation.png" />
-    <img src="colorpicker/images/mappoint.gif" />
-    <img src="colorpicker/images/rangearrows.gif" />
+    <img src="images/bar-blue-bl.png" />
+    <img src="images/bar-blue-br.png" />
+    <img src="images/bar-blue-tl.png" />
+    <img src="images/bar-blue-tr.png" />
+    <img src="images/bar-brightness.png" />
+    <img src="images/bar-green-bl.png" />
+    <img src="images/bar-green-br.png" />
+    <img src="images/bar-green-tl.png" />
+    <img src="images/bar-green-tr.png" />
+    <img src="images/bar-hue.png" />
+    <img src="images/bar-red-bl.png" />
+    <img src="images/bar-red-br.png" />
+    <img src="images/bar-red-tl.png" />
+    <img src="images/bar-red-tr.png" />
+    <img src="images/bar-saturation.png" />
+    <img src="images/map-blue-max.png" />
+    <img src="images/map-blue-min.png" />
+    <img src="images/map-brightness.png" />
+    <img src="images/map-green-max.png" />
+    <img src="images/map-green-min.png" />
+    <img src="images/map-hue.png" />
+    <img src="images/map-red-max.png" />
+    <img src="images/map-red-min.png" />
+    <img src="images/map-saturation-overlay.png" />
+    <img src="images/map-saturation.png" />
+    <img src="images/mappoint.gif" />
+    <img src="images/rangearrows.gif" />
   </div>
   
   <div id="colorpicker">
@@ -204,7 +204,7 @@
     </table>
   </div>
   
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
     document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
   </script>
@@ -212,6 +212,6 @@
     var pageTracker = _gat._getTracker("UA-79467-6");
     pageTracker._initData();
     pageTracker._trackPageview();
-  </script>
+  </script> -->
 </body>
 </html>
