--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
   
   <link href="http://github.com/feeds/deleteme/commits/swatchlet.com/master" rel="alternate" title="Recent Commits to swatchlet.com:master" type="application/atom+xml" />
   
+  <meta name="verify-v1" content="125urDrtCWwc7dqZWRXq6eqiR7+nUyxdlprIb+gIFY4=" />
+  
 </head>
 
 <body>
@@ -192,7 +194,7 @@
     </table>
   </div>
   
-  <!-- <script type="text/javascript">
+  <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
     document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
   </script>
@@ -200,6 +202,6 @@
     var pageTracker = _gat._getTracker("UA-79467-6");
     pageTracker._initData();
     pageTracker._trackPageview();
-  </script> -->
+  </script>
 </body>
 </html>
