--- a/tests/add new color.html
+++ b/tests/add new color.html
@@ -22,14 +22,24 @@
 	<td>1000</td>
 </tr>
 <tr>
+	<td>verifyVisible</td>
+	<td>colorpicker</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>cp1_Hex</td>
-	<td>F91616</td>
+	<td></td>
+</tr>
+<tr>
+	<td>typeKeys</td>
+	<td>cp1_Hex</td>
+	<td>F91616 </td>
 </tr>
 <tr>
 	<td>keyUp</td>
 	<td>cp1_Hex</td>
-	<td>1</td>
+	<td>6</td>
 </tr>
 <tr>
 	<td>pause</td>
@@ -40,6 +50,36 @@
 	<td>click</td>
 	<td>cp_ok</td>
 	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td></td>
+	<td>500</td>
+</tr>
+<tr>
+	<td>verifyNotVisible</td>
+	<td>colorpicker</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='stage']/div</td>
+	<td>#F91616xeditmove</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=x</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td></td>
+	<td>500</td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>//div[@id='stage']/div</td>
+	<td>F91616xeditmove</td>
 </tr>
 
 </tbody></table>
