Added more tests.

--- a/tests/swatchlet test suite.html
+++ b/tests/swatchlet test suite.html
@@ -11,6 +11,10 @@
 <tr><td><a href="add and delete color.html">add and delete color</a></td></tr>
 <tr><td><a href="add and edit color">add and edit color</a></td></tr>
 <tr><td><a href="add and edit color 2.html">add and edit color 2</a></td></tr>
+<tr><td><a href="reordering a color.html">reordering a color</a></td></tr>
+<tr><td><a href="add color white.html">add color (white)</a></td></tr>
+<tr><td><a href="refresh.html">refresh</a></td></tr>
+<tr><td><a href="add color black.html">add color (black)</a></td></tr>
 </tbody></table>
 </body>
 </html>
