--- a/tests/add color white.html
+++ b/tests/add color white.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="" />
-<title>add and delete color</title>
+<title>add color (white)</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">add and delete color</td></tr>
+<tr><td rowspan="1" colspan="3">add color (white)</td></tr>
 </thead><tbody>
 <tr>
 	<td>click</td>
@@ -34,12 +34,12 @@
 <tr>
 	<td>typeKeys</td>
 	<td>cp1_Hex</td>
-	<td>F91616</td>
+	<td>FFFFFF</td>
 </tr>
 <tr>
 	<td>keyUp</td>
 	<td>cp1_Hex</td>
-	<td>6</td>
+	<td>F</td>
 </tr>
 <tr>
 	<td>pause</td>
@@ -63,23 +63,8 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='stage']/div</td>
-	<td>#F91616xeditmove</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>link=x</td>
-	<td></td>
-</tr>
-<tr>
-	<td>pause</td>
-	<td></td>
-	<td>500</td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>//div[@id='stage']/div</td>
-	<td>F91616xeditmove</td>
+	<td>//div[@id='stage']/div[3]</td>
+	<td>#FFFFFFxeditmove</td>
 </tr>
 
 </tbody></table>
