--- a/tests/reordering a color 2.html
+++ b/tests/reordering a color 2.html
@@ -4,52 +4,37 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="" />
-<title>refresh</title>
+<title>reordering a color 2</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">refresh</td></tr>
+<tr><td rowspan="1" colspan="3">reordering a color 2</td></tr>
 </thead><tbody>
 <tr>
-	<td>refreshAndWait</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>pause</td>
-	<td></td>
-	<td>2</td>
+	<td>dragAndDropToObject</td>
+	<td>//div[@id='stage']/div[4]/ul/li[3]/a</td>
+	<td>//div[@id='stage']/div[1]/ul/li[3]/a</td>
 </tr>
 <tr>
 	<td>verifyText</td>
 	<td>//div[@id='stage']/div[1]/strong</td>
+	<td>#000000</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='stage']/div[2]/strong</td>
 	<td>#184B54</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='stage']/div[2]/strong</td>
+	<td>//div[@id='stage']/div[3]/strong</td>
 	<td>#87F5FF</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='stage']/div[3]/strong</td>
+	<td>//div[@id='stage']/div[4]/strong</td>
 	<td>#FFFFFF</td>
-</tr>
-<tr>
-	<td>verifyVisible</td>
-	<td>//div[@id='stage']/div[1]/strong</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyVisible</td>
-	<td>//div[@id='stage']/div[2]/strong</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyVisible</td>
-	<td>//div[@id='stage']/div[3]/strong</td>
-	<td></td>
 </tr>
 
 </tbody></table>
