--- a/tests/swatchlet test suite.html
+++ b/tests/swatchlet test suite.html
@@ -15,6 +15,8 @@
 <tr><td><a href="add color white.html">add color (white)</a></td></tr>
 <tr><td><a href="refresh.html">refresh</a></td></tr>
 <tr><td><a href="add color black.html">add color (black)</a></td></tr>
+<tr><td><a href="reordering a color 2.html">reordering a color 2</a></td></tr>
+<tr><td><a href="refresh 2.html">refresh 2</a></td></tr>
 </tbody></table>
 </body>
 </html>
