--- a/tests/swatchlet test suite.html
+++ b/tests/swatchlet test suite.html
@@ -8,6 +8,7 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
+<tr><td><a href="open swatchlet.html">open swatchlet</a></td></tr>
 <tr><td><a href="add and delete color.html">add and delete color</a></td></tr>
 <tr><td><a href="add and edit color">add and edit color</a></td></tr>
 <tr><td><a href="add and edit color 2.html">add and edit color 2</a></td></tr>
