Fixed a link to a test.

--- a/tests/swatchlet test suite.html
+++ b/tests/swatchlet test suite.html
@@ -10,7 +10,7 @@
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="open swatchlet.html">open swatchlet</a></td></tr>
 <tr><td><a href="add and delete color.html">add and delete color</a></td></tr>
-<tr><td><a href="add and edit color">add and edit color</a></td></tr>
+<tr><td><a href="add and edit color.html">add and edit color</a></td></tr>
 <tr><td><a href="add and edit color 2.html">add and edit color 2</a></td></tr>
 <tr><td><a href="reordering a color.html">reordering a color</a></td></tr>
 <tr><td><a href="add color white.html">add color (white)</a></td></tr>
