Renamed tests so that they didn't have spaces in their names.

--- a/tests/swatchlet test suite.html
+++ b/tests/swatchlet test suite.html
@@ -8,16 +8,16 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="open swatchlet.html">open swatchlet</a></td></tr>
-<tr><td><a href="add and delete color.html">add and delete color</a></td></tr>
-<tr><td><a href="add and edit color.html">add and edit color</a></td></tr>
-<tr><td><a href="add and edit color 2.html">add and edit color 2</a></td></tr>
-<tr><td><a href="reordering a color.html">reordering a color</a></td></tr>
-<tr><td><a href="add color white.html">add color (white)</a></td></tr>
+<tr><td><a href="open-swatchlet.html">open swatchlet</a></td></tr>
+<tr><td><a href="add-and-delete-color.html">add and delete color</a></td></tr>
+<tr><td><a href="add-and-edit-color.html">add and edit color</a></td></tr>
+<tr><td><a href="add-and-edit-color-2.html">add and edit color 2</a></td></tr>
+<tr><td><a href="reordering-a-color.html">reordering a color</a></td></tr>
+<tr><td><a href="add-color-white.html">add color (white)</a></td></tr>
 <tr><td><a href="refresh.html">refresh</a></td></tr>
-<tr><td><a href="add color black.html">add color (black)</a></td></tr>
-<tr><td><a href="reordering a color 2.html">reordering a color 2</a></td></tr>
-<tr><td><a href="refresh 2.html">refresh 2</a></td></tr>
+<tr><td><a href="add-color-black.html">add color (black)</a></td></tr>
+<tr><td><a href="reordering-a-color-2.html">reordering a color 2</a></td></tr>
+<tr><td><a href="refresh-2.html">refresh 2</a></td></tr>
 </tbody></table>
 </body>
 </html>
