Trying to make a test work in safari 4...

--- a/tests/add-and-delete-color.html
+++ b/tests/add-and-delete-color.html
@@ -12,9 +12,9 @@
 <tr><td rowspan="1" colspan="3">add and delete color</td></tr>
 </thead><tbody>
 <tr>
-	<td>click</td>
+	<td>clickAt</td>
 	<td>link=[ + ]&nbsp;&nbsp;Add New Color</td>
-	<td></td>
+	<td>1,1</td>
 </tr>
 <tr>
 	<td>pause</td>
@@ -67,9 +67,9 @@
 	<td>#F91616xeditmove</td>
 </tr>
 <tr>
-	<td>click</td>
+	<td>clickAt</td>
 	<td>link=x</td>
-	<td></td>
+	<td>1,1</td>
 </tr>
 <tr>
 	<td>pause</td>
