Trying a different xpath to the Add New Color link, hoping it will work in Safari.

--- a/tests/add-and-delete-color.html
+++ b/tests/add-and-delete-color.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>clickAt</td>
-	<td>link=[ + ]&nbsp;&nbsp;Add New Color</td>
+	<td>//*[@id="links"]/li/a</td>
 	<td>1,1</td>
 </tr>
 <tr>
