--- a/tests/add-and-edit-color.html
+++ b/tests/add-and-edit-color.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
   <td>click</td>
-  <td>link=[ + ]&nbsp;&nbsp;Add New Color</td>
+  <td>//*[@id="links"]/li/a</td>
   <td></td>
 </tr>
 <tr>
