--- a/tests/add-and-delete-color.html
+++ b/tests/add-and-delete-color.html
@@ -12,9 +12,9 @@
 <tr><td rowspan="1" colspan="3">add and delete color</td></tr>
 </thead><tbody>
 <tr>
-	<td>clickAt</td>
-	<td>//*[@id="links"]/li/a</td>
-	<td>1,1</td>
+	<td>click</td>
+	<td>//*[@id="add"]</td>
+	<td></td>
 </tr>
 <tr>
 	<td>pause</td>
