--- a/tests/add-and-delete-color.html
+++ b/tests/add-and-delete-color.html
@@ -12,9 +12,9 @@
 <tr><td rowspan="1" colspan="3">add and delete color</td></tr>
 </thead><tbody>
 <tr>
-	<td>click</td>
-	<td>add</td>
-	<td></td>
+	<td>clickAt</td>
+	<td>links</td>
+	<td>450,10</td>
 </tr>
 <tr>
 	<td>pause</td>
