--- a/tests/add-and-delete-color.html
+++ b/tests/add-and-delete-color.html
@@ -12,8 +12,8 @@
 <tr><td rowspan="1" colspan="3">add and delete color</td></tr>
 </thead><tbody>
 <tr>
-	<td>clickAt</td>
-	<td>links</td>
+	<td>click</td>
+	<td>add</td>
 	<td>450,10</td>
 </tr>
 <tr>
