--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
   
   <meta name="verify-v1" content="125urDrtCWwc7dqZWRXq6eqiR7+nUyxdlprIb+gIFY4=" />
   
+  <link rel="shortcut icon" href="/favicon.ico" />
+  
 </head>
 
 <body>
