Added about test case.

--- a/tests/TestSuite.html
+++ b/tests/TestSuite.html
@@ -18,6 +18,7 @@
 <tr><td><a href="add-color-black.html">add color (black)</a></td></tr>
 <tr><td><a href="reordering-a-color-2.html">reordering a color 2</a></td></tr>
 <tr><td><a href="refresh-2.html">refresh 2</a></td></tr>
+<tr><td><a href="about.html">about</a></td></tr>
 </tbody></table>
 </body>
 </html>
