--- a/src/App.html
+++ b/src/App.html
@@ -1,7 +1,16 @@
-<h1>Hello {name}!</h1>
+<div>
+<Header />
+<Swatches />
+</div>
 
 <style>
-	h1 {
-		color: purple;
-	}
+div {
+  font-family: "SF Mono";
+}
 </style>
+
+<script>
+  export default {
+    components: { Swatches: './Swatches.html', Header: './Header.html' }
+  };
+</script>
