remove some memoizing

--- a/src/AddNewColor.html
+++ b/src/AddNewColor.html
@@ -10,7 +10,7 @@
         const state = store.get();
         return renderHash({
           ...state,
-          swatches: [...$swatches, { value: '#ffffff' }]
+          swatches: [...$swatches, { name: 'White', value: '#ffffff' }]
         })
       }
     }
