--- a/src/ButtonLink.html
+++ b/src/ButtonLink.html
@@ -21,4 +21,10 @@
     background: black;
     text-decoration: none;
   }
+  a:active {
+    transform: translateY(1px);
+  }
+  a:focus {
+    outline: white;
+  }
 </style>
