--- a/src/ButtonLink.html
+++ b/src/ButtonLink.html
@@ -1,5 +1,6 @@
 <a
   href={href}
+  class={class}
 >
   <slot></slot>
 </a>
@@ -7,6 +8,7 @@
 <style>
   a {
     align-items: center;
+    align-self: center;
     background: rgba(0, 0, 0, 0.6);
     border: 0;
     border-radius: 15px;
