import action, clean up prop

--- a/src/App.html
+++ b/src/App.html
@@ -1,6 +1,6 @@
 <div>
   {#if typeof $picking === 'number'}
-    <Picker picking={$picking} />
+    <Picker />
   {:else}
     <Header />
     <Swatches />
