--- a/src/Swatch.html
+++ b/src/Swatch.html
@@ -5,14 +5,15 @@
     on:change='edit(value, i)'
     style='font-size: calc(100vw / {$swatches.length} * 0.2);'
   />
-  <div class="actions">
+  <ActionBar>
+    {name}
     <Button on:click='pick(i)' type='button' class='swatch-action'>
       Pick
     </Button>
     <ButtonLink href='{removeHref}' class='swatch-action'>
       X
     </ButtonLink>
-  </div>
+  </ActionBar>
 </div>
 
 <style>
@@ -25,19 +26,9 @@
   width: 100%;
 }
 
-.swatch:hover .actions {
+.swatch:hover :global(.actions) {
   display: flex;
   justify-content: flex-end;
-}
-
-.actions {
-  align-items: center;
-  display: none;
-  flex-direction: row;
-  position: absolute;
-  right: 5px;
-  top: 50px;
-  width: calc(100% - 5px * 2);
 }
 
 :global(.swatch-action) {
@@ -64,7 +55,8 @@ input {
 	export default {
 		components: {
 			ButtonLink: './ButtonLink.html',
-			Button: './Button.html'
+			Button: './Button.html',
+      ActionBar: './ActionBar.html'
 		},
     methods: {
       edit: (value, i) => {
