--- a/src/Swatches.html
+++ b/src/Swatches.html
@@ -1,6 +1,6 @@
 <div class='swatches'>
   {#each $swatches as swatch, i}
-    <Swatch value={swatch.value} i={i} />
+  <Swatch name={swatch.name} value={swatch.value} i={i} />
   {/each}
 </div>
 
